[package]
name = "ArmadaBot"
version = "0.1.0"
authors = ["Jeremy MacRoberts <contact@jeremymacroberts.com>"]
edition = "2018"

[dependencies]
serenity = { path = "../../", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "builder",
    "chrono",
    "framework",
    "http",
    "standard_framework",
    "utils",
    "cache"
    ] }

tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "time"] }

# [dependencies.serenity]
#default-features = false
#features = [
#    "builder",
#    "chrono",
#    "client",
#    "framework",
#    "gateway",
#    "http",
#    "model",
#    "standard_framework",
#    "utils",
#    "rustls_backend",
#    "cache",
#]
#version = "0.11"
#path = "../../"