[package]
name = "armada_bot"
version = "0.1.0"
authors = ["Jeremy MacRoberts <contact@jeremymacroberts.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
default-features = false
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "builder",
    "chrono",
    "framework",
    "http",
    "standard_framework",
    "utils",
    "cache"
    ]
version = "0.11"

#[dependencies.lavalink-rs]
#version = "0.8.0"
#default-features = false
#features = [
#    "serenity",
#    "rustls",
#    "songbird",
#    ]